Adding the missing images

--- a/view/swagger-ui.phtml
+++ b/view/swagger-ui.phtml
@@ -44,24 +44,18 @@
   });
 
   </script>
+  <style type="text/css">
+    #header {
+      background: url(/swagger-ui/images/header-menu-bg.png) repeat-x;
+      border-bottom: 0;
+    }
+  </style>
 </head>
 
 <body>
 <div id='header'>
   <div class="swagger-ui-wrap">
-    <a id="logo" href="http://swagger.wordnik.com">swagger</a>
-
-    <form id='api_selector'>
-      <div class='input icon-btn'>
-        <img id="show-pet-store-icon" src="<?php echo $this->basePath('swagger-ui/images/pet_store_api.png'); ?>" title="Show Swagger Petstore Example Apis">
-      </div>
-      <div class='input icon-btn'>
-        <img id="show-wordnik-dev-icon" src="<?php echo $this->basePath('swagger-ui/images/wordnik_api.png'); ?>" title="Show Wordnik Developer Apis">
-      </div>
-      <div class='input'><input placeholder="http://example.com/api" id="input_baseUrl" name="baseUrl" type="text"/></div>
-      <div class='input'><input placeholder="api_key" id="input_apiKey" name="apiKey" type="text"/></div>
-      <div class='input'><a id="explore" href="#">Explore</a></div>
-    </form>
+    <img src="/swagger-ui/images/logo.png" title="Api Melhor Menu" style="margin-top: -10px">
   </div>
 </div>
 
